--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -5,14 +5,13 @@
   padding: 0;
   box-sizing: border-box;
 
-
   .overlay {
     position: relative;
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, .65);
-    // @include flex(center, center);
   }
+
   .background {
     background-color: $off-black;
     position: absolute;
@@ -22,6 +21,7 @@
   }
   /////////////////////////// LOGIN ///////////////////////////
   .login {
+    z-index: 2;
     position: relative;
     @include flex(flex-start, center);
     width: 550px;
@@ -83,7 +83,6 @@
     text-align: center;
     color: $off-white;
     margin-bottom: 15px;
-    // margin-right: 30px;
   }
 
   .logo {
@@ -100,7 +99,6 @@
     width: 92%;
     line-height: 63px;
     margin-top: 15px;
-    // margin-right: 32px;
     // background-color: darkseagreen;
   }
   /////////////////////////// RIGHT ///////////////////////////
@@ -165,7 +163,6 @@
     flex-direction: column;
     justify-content: center;
     @include wxh(auto, 445px);
-    // margin-top: 20px;
     // background-color: salmon;
   }
 
@@ -190,10 +187,6 @@
     // background-color: orangered;
   }
 
-  // #vertical {
-  //   width: 950px;
-  //   height: 100vh;
-  // }
 /////////////////////////// MEDIA QUERIES ///////////////////////////
 //RIGHT AND LEFT LAYOUTS
   @media (min-width: 1371px) {
@@ -279,39 +272,6 @@
       overflow-x:hidden;
       overflow-y:scroll;
     }
-
-
-
-    // .login {
-    //
-    // }
-    // .container {
-    //   @include wxh(none, none);
-    // }
-    //
-    // .divider-block {
-    //   display: none;
-    // }
-    //
-    // .block-left {
-    //   // background-color: green;
-    //   @include flex(center, none);
-    //   flex-direction: column;
-    //   height: auto;
-    // }
-    //
-    // .block-right {
-    //   background-color: $blue;
-    //   @include flex(center, none);
-    //   flex-direction: column;
-    //   @include wxh(500px, 540px);
-    //   padding-left: 45px;
-    // }
-    //
-    // .background2 {
-    //   background-color: $off-black;
-    //   width: 100%;
-    // }
   }
   //***************************************
     @media (max-width: 550px) {
@@ -319,7 +279,7 @@
         display: none;
       }
       form {
-        margin-left: 0px;
+        display: none;
       }
       .login {
         display: none;
