--- a/public/styles/routes/_adminHome.scss
+++ b/public/styles/routes/_adminHome.scss
@@ -4,6 +4,7 @@
 
 .button {
   border: 1px solid $off-white;
+
 }
 
 .no-cursor {
@@ -11,18 +12,22 @@
 }
 
 .butt.admin-accordion {
-    width: 100%;
-    background: $off-black;
-    color: $off-white;
-    font-size: 35px;
-    font-family: $font;
-    text-align: center;
-    border: 1px solid $dark-grey;
-    border-bottom: 0;
-    outline: none;
-    padding: 20px;
-    cursor: pointer;
-    // transition: 0.1s;
+  width: 100%;
+  background: $off-black;
+  color: $off-white;
+  font-size: 35px;
+  font-family: $font;
+  text-align: center;
+  border: 1px solid $dark-grey;
+  border-bottom: 0;
+  outline: none;
+  padding: 20px;
+  cursor: pointer;
+  // transition: 0.1s;
+}
+a {
+  text-decoration: none;
+  color: $off-white;
 }
 
 .butt.admin-accordion.active:first-child, .butt.admin-accordion:hover:first-child{
